EXT-214 Fix some bugs and rewrite comments

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -37,6 +37,9 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                         </p>
                     </div>
                 </div>
+                <div id="rate" class="row center-align">
+                    <a class="newTabLinks" href="https://chrome.google.com/webstore/detail/jira-template-injector/hmhpegjieopgbdmpocdmfkafjgcdmhha/reviews?hl=en">Feedback | </a>
+                </div>
                 <div id="help" class="row center-align">
                     <a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">Help?</a>
                 </div>
