--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -38,13 +38,21 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                     </div>
                 </div>
                 <div id="help" class="row center-align">
-                    <a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">Help?</a>
+                    <a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension"> Help?</a>
                 </div>
             </nav>
         </div>
 
         <main>
             <div class="container">
+                <div id = "rateSection">
+                    <div class="section">
+                        <div class="row text-center">
+                            <a id = "rate" class="waves-effect waves-light btn red"><i class="material-icons left">grade</i>Rate It Now !</a>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                </div>
                 <div class="section">
                     <div class="row">
                         <div class="col s8 valign-wrapper">
