Ext 136 rate button (#21)
* EXT-214 Enable shortcut key to quickly jump to next selected TI element

* EXT-214 comment added

* EXT-214 keyboard shortcut now tracks the cursor position and search for the next <TI> tag

* test

* EXT136 rate me button added

* EXT-136 Added a 'rate it now' button to the popup UI

* EXT-136 code fix.

* EXT-136 made general toggle functions

* EXT-136 reset jti_content.js

* EXT-136 added toggle value to setToggleStatus function

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -45,6 +45,14 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
 
         <main>
             <div class="container">
+                <div id = "rateSection">
+                    <div class="section">
+                        <div class="row text-center">
+                            <a id = "rate" class="waves-effect waves-light btn red"><i class="material-icons left">grade</i>Rate It Now !</a>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                </div>
                 <div class="section">
                     <div class="row">
                         <div class="col s8 valign-wrapper">
