EXT 612 Add support for specifying projects for templates

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -184,6 +184,16 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             </div>
                         </div>
                     </div>
+
+                    <div class="invisible-divider"></div>
+                    <div class="row">
+                        <div class="col s2 valign-wrapper zpr">
+                            <h6>Projects</h6>
+                        </div>
+                        <div class="col s10 zpl">
+                            <input id="customTemplateProjectsField" type="text" name="projectsField" placeholder="AIR, JIR (leave blank for all projects)" >
+                        </div>
+                    </div>
                     <div class="divider"></div>
                     <label class="addTemplateLabel">Default:</label>
                     <div class="row" id="addDefaultDropdownRow">
