--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -184,11 +184,10 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             </div>
                         </div>
                     </div>
-
                     <div class="invisible-divider"></div>
                     <div class="row">
                         <div class="col s2 valign-wrapper zpr">
-                            <h6>Projects</h6>
+                            <h6>Projects:</h6>
                         </div>
                         <div class="col s10 zpl">
                             <input id="customTemplateProjectsField" type="text" name="projectsField" placeholder="AIR, JIR (leave blank for all projects)" >
