EXT 612 Use template for collapsible template editor and fix default template dropdown

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -218,5 +218,8 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Dynamically built -->
             </ul>
         </main>
+
+        <!-- Need this to be able to grab the sandbox window to compile the edit templates -->
+        <iframe id="sandbox_window" src="sandbox.html" hidden></iframe>
     </body>
 </html>
