Create a utils file for common functions

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -14,6 +14,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
         <script type="text/javascript" src="../lib/jquery/jquery-2.2.3.js"></script>
         <script type="text/javascript" src="../lib/materialize/materialize.js"></script>
         <script type="text/javascript" src="../lib/filesaver/FileSaver.js"></script>
+        <script type="text/javascript" src="../js/utils.js"></script>
         <script type="text/javascript" src="../js/popup.js"></script>
         <!-- CSS -->
         <link type="text/css" rel="stylesheet" href="../lib/materialize/materialize.css"  media="screen,projection"/>
