--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -14,6 +14,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
         <script type="text/javascript" src="../lib/jquery/jquery-2.2.3.js"></script>
         <script type="text/javascript" src="../lib/materialize/materialize.js"></script>
         <script type="text/javascript" src="../lib/filesaver/FileSaver.js"></script>
+        <script type="text/javascript" src="../js/utils.js"></script>
         <script type="text/javascript" src="../js/popup.js"></script>
         <!-- CSS -->
         <link type="text/css" rel="stylesheet" href="../lib/materialize/materialize.css"  media="screen,projection"/>
@@ -184,6 +185,15 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             </div>
                         </div>
                     </div>
+                    <div class="invisible-divider"></div>
+                    <div class="row">
+                        <div class="col s2 valign-wrapper zpr">
+                            <h6>Projects:</h6>
+                        </div>
+                        <div class="col s10 zpl">
+                            <input id="customTemplateProjectsField" type="text" name="projectsField" placeholder="AIR, JIR (leave blank for all projects)" >
+                        </div>
+                    </div>
                     <div class="divider"></div>
                     <label class="addTemplateLabel">Default:</label>
                     <div class="row" id="addDefaultDropdownRow">
@@ -209,5 +219,8 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Dynamically built -->
             </ul>
         </main>
+
+        <!-- Need this to be able to grab the sandbox window to compile the edit templates -->
+        <iframe id="sandbox_window" src="sandbox.html" hidden></iframe>
     </body>
 </html>
