Addressed CR points

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -223,7 +223,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
 
         <!-- Manage custom domains section -->
         <div class="container">
-            <div class="customDomainList">
+            <div class="custom-domain-list">
                 <!-- Back and clear buttons -->
                 <div class="row valign-wrapper">
                     <div class="col s2">
@@ -235,9 +235,9 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                         <div color="black" class="center-align custom-domain-label">Manage Custom Domains</div>
                     </div>
                     <div class="col s2 right-align">
-                            <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Clear All Domains">
-                                    <i class="material-icons">delete</i>
-                            </a>
+                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Clear All Domains">
+                                <i class="material-icons">delete</i>
+                        </a>
                     </div>
                 </div>
                 <!-- Add Custom Domain section -->
