--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -65,9 +65,6 @@
             {{/each}}
         </script>
         <script>
-            var source = document.getElementById('edit_template').innerHTML;
-            var htmlTemplate = Handlebars.compile(source);
-
             Handlebars.registerHelper('boldIfDefault', function (template) {
                 if (!template['issuetype-field'] && !template['projects-field']) {
                     return 'font-bold';
@@ -75,21 +72,33 @@
                     return '';
                 }
             })
-
             window.addEventListener('message', function (event) {
                 var command = event.data.command;
-                if (command === "renderTemplates") {
-                    event.source.postMessage({
-                        content: 'template-editor',
-                        html: htmlTemplate(event.data.context),
-                        callback: event.data.callback,
-                        openTemplate: event.data.openTemplate
-                    }, event.origin);
+                switch(command) {
+                    case "renderTemplates":
+                        var source = document.getElementById('edit_template').innerHTML;
+                        var htmlTemplate = Handlebars.compile(source);
+                        event.source.postMessage({
+                            content: 'template-editor',
+                            html: htmlTemplate(event.data.context),
+                            callback: event.data.callback,
+                            openTemplate: event.data.openTemplate
+                        }, event.origin);
+                        break;
+                    case "renderDomain":
+                        var domainSource = document.getElementById('addDomains').innerHTML;
+                        var htmlDomainTemplate = Handlebars.compile(domainSource);
+                            event.source.postMessage({
+                            content: 'domain-list',
+                            html: htmlDomainTemplate(event.data.context),
+                            callback: event.data.callback
+                        }, event.origin);
+                        break;
                 }
             });
         </script>
 
-        <script id="add_Domains" type="text/x-handlebars-template">
+        <script id="addDomains" type="text/x-handlebars-template">
             {{#each domains}}
                 {{#if this.default}}
                     <li class='collection-item container custom-domain-collection'>
@@ -109,28 +118,13 @@
                             </div>
                             <div class='col s2'>
                                 <a id='customDomainRemoveButton' class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Domain'> 
-                                    <i class='material-icons'>delete</i> 
+                                    <i id= {{this.id}} class='material-icons'>delete</i> 
                                 </a>
                             </div>
                         </div>
                     </li>
                 {{/if}}
             {{/each}}
-        </script>
-
-        <script>
-            var domainSource = document.getElementById('add_Domains').innerHTML;
-            var htmlDomainTemplate = Handlebars.compile(domainSource);
-            window.addEventListener('message', function (event) {
-                var command = event.data.command;
-                if (command.localeCompare('renderDomain') === 0) {
-                    event.source.postMessage({
-                        content: 'domain-list',
-                        html: htmlDomainTemplate(event.data.context),
-                        callback: event.data.callback
-                    }, event.origin);
-                }
-            });
         </script>
     </body>
 </html>
