Completed round 2 of CR.

--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -117,8 +117,8 @@
                                 {{ this.name }} 
                             </div>
                             <div class='col s2'>
-                                <a id='customDomainRemoveButton' class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Domain'> 
-                                    <i id= {{this.id}} class='material-icons'>delete</i> 
+                                <a class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Domain'> 
+                                    <i id= {{this.id}} class='customDomainRemoveButton material-icons'>delete</i> 
                                 </a>
                             </div>
                         </div>
